Fix autocomplete dropdown behind navbar on desktop

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ h5 {
       width: 33.333334%;
       left: 50%;
       transform: translate(-50.1%, 0);
-      z-index: 2010; }
+      z-index: 1000; }
       .header .container-fluid.navbar-wrapper {
         height: 100%; }
       .header .navbar {
@@ -322,7 +322,7 @@ a:hover {
       width: 100%;
       position: fixed;
       top: 0;
-      z-index: 2000; } }
+      z-index: 999; } }
   .explore a:hover {
     color: white; }
 
