--- a/assets/css/pages/home.scss
+++ b/assets/css/pages/home.scss
@@ -72,7 +72,7 @@ a:hover {
         width: 100%;
         position: fixed;
         top: 0;
-        z-index: 2000;
+        z-index: 999;
     }
 
 
