--- a/assets/css/partials/header.scss
+++ b/assets/css/partials/header.scss
@@ -68,7 +68,7 @@
         width: 33.333334%;
         left: 50%;
         transform: translate(-50.1%, 0);
-        z-index: 2010;
+        z-index: 1000;
 
         .container-fluid.navbar-wrapper {
             height: 100%;
